# dogs-vs-cats

./: README.md  pyproject.toml
.dvc/: config
configs/: config.yaml
data/: .gitignore  train_11k.dvc  val.dvc
dogs_vs_cats/: infer.py  train.py  utils.py
results/: out.csv
